<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/lblNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lblNombre"
                    />
                <EditText
                    android:id="@+id/txtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                </EditText>
                <TextView
                    android:id="@+id/lblEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lblEdad"
                    />
                <EditText
                    android:id="@+id/txtEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                </EditText>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/rbSencillo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sencillo"
                        ></RadioButton>
                    <RadioButton
                        android:id="@+id/rbDoble"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Doble"
                        ></RadioButton>
                </RadioGroup>
                <TextView
                    android:id="@+id/lblPaisesDisponibles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desApp"
                    android:gravity="center"
                    android:textSize="20dp"
                    />
                <TextView
                    android:id="@+id/lblSelecciona"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblPaises"
                    android:gravity="center"
                    />
                <Spinner
                    android:id="@+id/spnPaises"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ></Spinner>
                <TextView
                    android:id="@+id/lblFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblFecha"
                    android:gravity="center"
                    />
                <DatePicker
                    android:id="@+id/dpFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                </DatePicker>
                <Button
                    android:id="@+id/btnResivo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Enviar informacion"
                    >
                </Button>
                <Button
                    android:id="@+id/btnCerrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cerrar aplicación"
                    >
                </Button>
                <Button
                    android:id="@+id/btnLimpiar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Borrar información"
                    >
                </Button>
                <TextView
                    android:id="@+id/lblBoletoDatos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ></TextView>


            </LinearLayout>
        </ScrollView>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>